# pyclimb

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
pyclimb/: __init__.py  converter.py  exceptions.py  grading_system.py  grading_systems.py  mapper.py  mappers.py
tests/: test_converter.py
