[tool.poetry]
name = "pyclimb"
version = "0.2.0"
description = "A library to easily convert climbing route grades between different grading systems."
authors = ["ilias-ant <ilias.antonopoulos@yahoo.gr>"]
readme = "README.md"
license = "MIT"
homepage = "https://pypi.org/project/pyclimb"
repository = "https://github.com/ilias-ant/pyclimb"
keywords = ["pip", "converter", "climbing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3 :: Only",
    
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ilias-ant/pyclimb/issues"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^21.12b0"
isort = "^5.10.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
